# virus_interactome

./: .coverage  .gitignore  HAdV5_pipeline.md  INTERACTOME_DOC.md  Interactome_pipeline.md  README.md  missing_jobs.json  missing_jobs.txt  pyproject.toml  pytest.ini
tests/: conftest.py  test_interactome_analyzer.py  test_interactome_writer.py  test_loading_ppi_info.py  test_metrics.py  test_proteome_inputs.py
tests/data/: dummy_dimer_full_data_0.json  dummy_dimer_model_0.cif  dummy_dimer_summary_confidences_0.json  dummy_proteome.fasta  dummy_proteome_invalid_sequences.fasta  dummy_proteome_non_fasta.fasta  dummy_proteome_repeated_protein_id.fasta
tests/unit/: test_databases.py  test_interactome_analyzer.py  test_interactome_processor.py  test_interactome_runner.py  test_interactome_writer.py  test_metrics.py  test_model.py  test_peptide_mixin.py  test_plotting.py  test_proteome_manager.py  test_reproducibility.py  test_utils.py
virus_interactome/: AdV5_proteome_utils.py  ExtraMethods_InteractomeAnalyzer.md  __init__.py  _network_mixin.py  _peptide_mixin.py  _stats_mixin.py  _validation_mixin.py  databases.py  fasta_utils.py  foldseek.py  interactome.py  interactome_analyzer.py  interactome_processor.py  interactome_runner.py  main.py  metrics.py  model.py  molecule.py  plotting.py  proteome_input.py  proteome_manager.py  proteome_utils.py  utils.py  writer.py
virus_interactome.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
virus_interactome/scripts/: generate_ipsaes.py  generate_json.py  generic_af2_3_inputs.py  missing_jobs.py  plot_prueba.py  (+4 more)
(+12 files in other folders)
